test/conformance/chainsaw/verify-images/clusterpolicy/standard/imageExtractors-complex/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: imageextractors-complex
spec:
  concurrent: false
  steps:
  - name: step-00
    try:
    - apply:
        file: crd.yaml
    - assert:
        file: crd-ready.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: tasks-complex
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: badtask.yaml
  - name: step-03
    try:
    - error:
        file: chainsaw-step-03-error-1.yaml
